# os_labs

lab1/c/include/: compfuncs.h
lab1/cpp/: CMakeLists.txt  compfunc.cpp  test.cpp
lab1/cpp/include/: compfunc.hpp
lab1/java/: .swp  pom.xml
lab1/java/src/main/java/: Main.java
lab1/java/src/main/java/os/lab1/: Computation.java
